[package]
name = "bubble-sort"
description = "A quick and non-optimized, cloning version of the bubble sort algorithm. Created as a showcase for publishing crates in the Rust Cookbook 2018"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"
homepage = "https://blog.x5ff.xyz"
repository = "https://github.com/PacktPublishing/Rust-Programming-Cookbook"
license = "MIT"
categories = [
    "Algorithms",
    "Support"
]
keywords = [
    "cookbook",
    "packt",
    "x5ff",
    "bubble",
    "sort",
]
readme = "README.md"
maintenance = { status = "experimental" }